--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <div class="logo">SS</div>
+      <div class src="logo.png">SS</div>
       <div class="title">SCHEME SPHERE</div>
     </div>
 
