Added logo beside Scheme Sphere title

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <div class src="logo.png">SS</div>
-      <div class="title">SCHEME SPHERE</div>
-    </div>
+  <img src="logo.png" alt="Scheme Sphere Logo" class="logo">
+  <div class="title">SCHEME SPHERE</div>
+</div>
+
 
     <nav class="navcenter">
       <a class="navlink active">Home</a>
