Added scheme details page and view navigation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main class="container">
     <section class="hero">
       <div>
-        <h1>Welcome back, Rohit!</h1>
+        <h1>!🎊! Welcome To SCHEME SPHERE !🎊!</h1>
         <p class="sub">Discover all government schemes</p>
       </div>
     </section>
