Added hover effects and saffron shadow to scheme cards

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </nav>
 
     <a href="profile.html" class="profilelink">
-  <div class="profile">
-    <div class="avatar">R</div>
+  <div class="profile" style="text-decoration: none;">
+    <div class="avatar">👨‍💻</div>
     Profile
   </div>
 </a>
