--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <header class="topbar">
     <div class="brand">
   <img src="logo.png" alt="Scheme Sphere Logo" class="logo">
-  <div class="title">SCHEME SPHERE</div>
+  <div class="title animated-title">SCHEME SPHERE</div>
+
 </div>
 
 
@@ -25,7 +26,6 @@
     <a href="profile.html" class="profilelink">
   <div class="profile" style="text-decoration: none;">
     <div class="avatar">👨‍💻</div>
-    Profile
   </div>
 </a>
   </header>
