--- a/profile.html
+++ b/profile.html
@@ -3,116 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Profile</title>
-<style>
-    body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f0f4f8;
-        margin: 0;
-        padding: 0;
-    }
-
-    h2 {
-        text-align: center;
-        color: #2c3e50;
-        margin-bottom: 20px;
-    }
-
-    .profile-container {
-        max-width: 800px;
-        margin: 50px auto;
-        padding: 20px;
-    }
-
-    .card {
-        background-color: #fff;
-        border-radius: 12px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        padding: 20px;
-        margin-bottom: 25px;
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-    }
-
-    .card h3 {
-        margin-top: 0;
-        margin-bottom: 15px;
-        color: #34495e;
-        border-bottom: 1px solid #eee;
-        padding-bottom: 8px;
-    }
-
-    .profile-field {
-        display: flex;
-        flex-wrap: wrap;
-        margin-bottom: 15px;
-        align-items: center;
-    }
-    .profile-field label {
-        width: 200px;
-        font-weight: 600;
-        color: #2c3e50;
-        margin-bottom: 5px;
-    }
-    .profile-field input,
-    .profile-field select {
-        flex: 1;
-        padding: 8px 10px;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-    }
-    input:disabled,
-    select:disabled {
-        background-color: #f4f6f8;
-    }
-
-    .upload-box {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-    }
-    .upload-box img {
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-    }
-
-    .error-msg {
-        color: red;
-        font-size: 13px;
-        margin-left: 200px;
-        margin-top: -10px;
-        margin-bottom: 10px;
-    }
-
-    .buttons {
-        text-align: center;
-        margin-top: 20px;
-    }
-    button {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 14px;
-        margin: 0 10px;
-        transition: background 0.3s, transform 0.2s;
-    }
-    .edit-btn { background-color: #3498db; color: #fff; }
-    .edit-btn:hover { background-color: #2980b9; transform: scale(1.05); }
-    .save-btn { background-color: #2ecc71; color: #fff; display: none; }
-    .save-btn:hover { background-color: #27ae60; transform: scale(1.05); }
-
-    @media(max-width: 600px) {
-        .profile-field { flex-direction: column; }
-        .profile-field label { width: 100%; margin-bottom: 5px; }
-        .error-msg { margin-left: 0; }
-    }
-</style>
+<link rel="stylesheet" href="profile.css">
 </head>
 <body>
 
